# project

./: .config  .gitignore  CMakeLists.txt  README.md  dap-link.cfg  project.ewp  project.uvgui.23391  project.uvopt  project.uvoptx  project.uvproj  project.uvprojx  rtconfig.h  vscode.code-workspace
app/: Hello.c  SConscript
applications/: main.c
applications-day1/: main.c
applications-day2/: 01-main_task_creation.c  main.c
board/: Kconfig
day1/: Hello.h  README.md
day1/source/: Hello.c
day2/: 01-thread_creation.c  README.md  SConscript
day3/: README.md  event_group.c  mutex_test.c  semaphore_test.c
day4/: README.md  device_register.c  drive_test.c  pin_irq_example.c  spi_test_demo.c
libraries/HAL_Drivers/: SConscript  drv_test.c
rt-thread/components/drivers/pm/: pm.c
rt-thread/components/fal/samples/porting/: README.md
rt-thread/components/lwp/: lwp.c  lwp_elf.h
rt-thread/components/net/lwip/lwip-1.4.1/src/core/: dns.c
rt-thread/components/net/lwip/lwip-1.4.1/src/include/lwip/: snmp_msg.h
rt-thread/components/net/lwip/lwip-2.0.3/src/apps/httpd/makefsdata/: makefsdata.c
rt-thread/components/net/lwip/lwip-2.0.3/src/core/: dns.c
rt-thread/components/net/lwip/lwip-2.1.2/src/apps/altcp_tls/: altcp_tls_mbedtls.c
rt-thread/components/net/lwip/lwip-2.1.2/src/apps/http/makefsdata/: makefsdata.c
rt-thread/components/net/lwip/lwip-2.1.2/src/core/: dns.c
rt-thread/components/net/lwip/lwip-2.1.2/test/unit/api/: test_sockets.c
rt-thread/include/: rtdef.h
rt-thread/tools/: mkdist.py
rt-thread/tools/kconfig-frontends/scripts/.autostuff/scripts/: ltmain.sh
